<resources>
    <string name="app_name">skinEngine</string>
<!--    <string name="test1">立刻给家里空间</string>-->
<!--    <string name="test2">挂机了赶紧离开</string>-->
<!--    <string name="test3">发生的发生</string>-->
<!--    <string name="test4">个人户合适的话</string>-->
<!--    <string name="test5">调节人体今日退回</string>-->
<!--    <string name="test6">回头一看他依然可以同仁堂</string>-->
    <string name="test1">Give home space right away</string>
    <string name="test2">Hung up and leave</string>
    <string name="test3">What happened</string>
    <string name="test4">Personal account if appropriate</string>
    <string name="test5">Regulate the human body to return today</string>
    <string name="test6">Looking back, he can still be Tong Ren Tang</string>
    <string name="huanfu">change skin</string>
    <string name="morenpifu">Default skin</string>
    <string name="jumpTonext">Skip to the next screen</string>
    <string name="jumpToList">Jump to list</string>
    <string name="fanti">Traditional Chinese</string>
    <string name="jianti">Simplified Chinese</string>
    <string name="followSys">Follow system</string>
    <string name="settingFontSize">Set the font to be larger by 25</string>
    <string name="jumpToThree">Jump to the third interface</string>
    <string name="changeFont">Modify font</string>
    <string name="defalutFont">Default font</string>
    <string name="guoyuandianjin">National yuan point</string>
    <string name="English">English</string>
    <string name="jar_to_st">Simplified and Traditional Chinese</string>
    <string name="font_scale">Modify font size</string>
    <string name="normal_size_font">Standard font size</string>
    <string name="small_font">小号字体</string>
</resources>